# LBP_Descriptor_CUDA

./: .gitignore  CMakeLists.txt  README.md
res/images/ppm/: computer_programming_lbp.ppm  giraffe360p.ppm  gray_computer_programming.ppm  leopard720p.ppm  tiger480p.ppm
src/: Image.cpp  Lbp.cu  LbpUtils.cpp  LbpUtils.h  PPM.cpp  PPM.h  Utils.cpp  Utils.h  imageToCsv.py  main.cu
